--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -2334,11 +2334,11 @@
 <p>You need to determine the type of payment to calculate using a special income tax rate.</p>
 	
  <p>If the payment is a: </p>  
-  <ul class="list-unstyled cnjnctn-type-or ">
-        <li class="cnjnctn-col"><strong>Patronage payment</strong>, continue to <a href="#patron">step 1a</a>.</li>
-	<li class="cnjnctn-col"><strong>Payment made to a fisher (completed form TD3F)</strong>, continue to <a href="#fishers">step 1b</a>.</li>
-	<li class="cnjnctn-col"><strong>Payments of fees for services to a non-resident</strong>, continue to <a href="#fees-non">step 1c</a>.</li>
-               <li class="cnjnctn-col"><strong>Any other payments</strong>, continue to <a href="#otherpay">step 2</a>.</li>
+  <ul>
+        <li><strong>Patronage payment</strong>, continue to <a href="#patron">step 1a</a>.</li>
+	<li><strong>Payment made to a fisher (completed form TD3F)</strong>, continue to <a href="#fishers">step 1b</a>.</li>
+	<li><strong>Payments of fees for services to a non-resident</strong>, continue to <a href="#fees-non">step 1c</a>.</li>
+        <li><strong>Any other payments</strong>, continue to <a href="#otherpay">step 2</a>.</li>
             </ul>
 
 <ol class="lst-stps-sub">
@@ -2441,7 +2441,7 @@
  			 <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> This amount is the income tax that you must withhold and remit from your employee's pay 
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> This amount is the income tax that you must withhold and remit from the proceeds paid to the fisher
                                  </span></span> 
                               </li>
 
@@ -2466,7 +2466,7 @@
  			 <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $16 is the income tax that you must withhold and remit from Matthew's payment 
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $16 is the income tax that you must withhold and remit from the proceeds paid to Matthew 
                                  </span></span> 
                               </li>
 
@@ -2474,7 +2474,7 @@
 
 </details>
 </li>
-<li><h4 id="fees-non">Calculate the total remuneration for a payment of fees for services made to a non-resident</h4>
+<li><h4 id="fees-non">Calculate the total amount of payment of fees for services rendered in Canada made to a non-resident</h4>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -2491,7 +2491,7 @@
  			 <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> This amount is the income tax that you must withhold and remit from the non-resident's payment 
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> This amount is the income tax that you must withhold and remit from the payment to the non-resident
                                  </span></span> 
                               </li>
 
@@ -2499,12 +2499,12 @@
 <p> <span class="fas fa-ban text-danger fa-lg"> </span> <strong>You do not need to do additional calculations</strong>. </p>
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>You decided to outsource your IT services to an independent contractor and contracted John, a non-resident of Canada, to do the work. You pay $500 per week for the service.   </p>
+<p>You decided to outsource your IT services to an independent contractor and contracted John, a non-resident of Canada, to do the work in Canada. You pay $500 per week for the service.   </p>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x"></i>
-                                 </span><span class="mrgn-tp-0 text-muted h5"> $500 is John's payment of fees for services as a non-resident</span> 
+                                 </span><span class="mrgn-tp-0 text-muted h5"> $500 is the payment of fees to John, a non-resident for services rendered in Canada</span> 
                               </li>
 			<li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
@@ -2516,7 +2516,7 @@
  			 <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $75 is the income tax that you must withhold and remit from John's payment 
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $75 is the income tax that you must withhold and remit from the payment to John 
                                  </span></span> 
                               </li>
 
@@ -2603,7 +2603,7 @@
                               <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $31,500 is Joseph's total remuneration
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $31,323.89 is Joseph's total remuneration
                                  </span></span> 
                               </li> </ul>	
 
