--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -3332,7 +3332,7 @@
 <li> <h3 class="h4">Determine the total amount of lump-sum payments you had paid or expect to pay in the calendar year</h3>
  <p>If payments were made to a: </p>  
   <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><strong>Canadian resident</strong>, continue to <a href="#can">step 2a</a>.</li>
+              <li class="cnjnctn-col"><strong>Canadian resident</strong>, continue to <a href="#can">steps 2a, 3 and 4</a>.</li>
                <li class="cnjnctn-col"><strong>Non-resident</strong>, continue to <a href="#nonres">step 2b</a>.</li>
             </ul> 
 
@@ -3411,7 +3411,7 @@
  			 <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> This amount is the income tax that you must withhold and remit from your employee's pay 
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> This amount is the income tax that you must withhold and remit from the lump-sum payment to the non-resident  
                                  </span></span> 
                               </li>
 
@@ -3436,7 +3436,7 @@
  			 <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $625 is the income tax that you must withhold and remit from Joelle's lump-sum payment 
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $625 is the income tax that you must withhold and remit from the lump-sum payment to Joelle 
                                  </span></span> 
                               </li>
 
@@ -3446,8 +3446,8 @@
 </ol>
 </li>
 
-<li> <h3 class="h4">Determine the withholding rate based on the total amount of the lump-sum payments for the year</h3>
-<p>Use the lump-sump withholding rates that matches your employee's total amount of lump-sum payments:</p>
+<li> <h3 class="h4">Determine the withholding rate based on the total amount of the lump-sum payments for the year to an employee who is a Canadian resident</h3>
+<p>Use the lump-sum withholding rates that matches your employee's total amount of lump-sum payments:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><strong>$5,000 or less</strong>, 10% (5% for Quebec) </li>
 <li class="cnjnctn-col"><strong>$5,001 to $15,000</strong>, 20% (10% for Quebec)</li>
@@ -3455,7 +3455,7 @@
 </ul>
 
 </li>
-<li> <h3 class="h4">Calculate the amount of income tax you have to withhold and remit</h3>
+<li> <h3 class="h4">Calculate the amount of income tax you have to withhold and remit to an employee who is a Canadian resident</h3>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -3479,7 +3479,7 @@
                   </ul>
  <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>Joseph’s employer paid a lump sum payment of $2,500 in April 2023. Joseph’s province of employment is Manitoba.</p>
+<p>Joseph’s employer paid a lump sum payment of $2,500 in April 2023. Joseph’s province of employment is Manitoba and is a Canadian resident.</p>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -3508,11 +3508,11 @@
 <ol class="lst-stps-sub">
 <li><h4>Determine the annual tax to be deducted from the recipient’s yearly remuneration including the lump sum payment</h4>
 <p>You need to calculate the recipient’s annual tax on their annual remuneration <strong>including the lump-sum payment</strong>. </p>
-<p>Continue to <a href="#tab-mnl">Any payments (manual calculation)</a> using steps 1, 2, 3 and 4. </p>
+<p>Continue to <a href="#tab-mnl">Regular payments (manual calculation)</a> using steps 1, 2, 3 and 4. </p>
 <p>From step 4, you only need to get the result: This is the total amount you have to withhold and remit: federal, provincial and territorial income tax.</p>
  <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>Joseph receives a weekly salary of $500 and $50 in taxable benefits per pay period. He received a $2,500 lump-sum payment in April 2023. The lump-sum payment was determined to not be pensionable or insurable. His province of employment is New Brunswick. He requested the optional calculation for tax on his lump-sum payment. His employer began the calculation by determining Joseph’s annual tax including the lump sum payment. </p>
+<p>Joseph receives a weekly salary of $500 and $50 in taxable benefits per pay period. He received a $2,500 lump-sum payment in April 2023. The lump-sum payment was determined to not be pensionable or insurable. Joseph is a Canadian resident and his province of employment is New Brunswick. He requested the optional calculation for tax on his lump-sum payment. His employer began the calculation by determining Joseph’s annual tax including the lump sum payment. </p>
 <h4 class="h4">Step 1 - Calculate the annual taxable income</h4>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
