--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -3635,7 +3635,7 @@
                                  <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x"></i>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5">$2,710.16 ($18,076.72 X 15%) is Joseph's total federal tax credits multiplied by the lowest federal tax rate for the year. $18,076.72 is the sum of:
+                                 </span>  <span class="mrgn-tp-0 text-muted h5">$2,711.51 ($18,076.72 X 15%) is Joseph's total federal tax credits multiplied by the lowest federal tax rate for the year. $18,076.72 is the sum of:
 
 				 <ul class="mrgn-lft-lg lst-spcd mrgn-bttm-md">
 
@@ -3650,7 +3650,7 @@
                               <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $1,911.94 is Joseph's total federal tax payable for the year
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $1,910.59 is Joseph's total federal tax payable for the year
                                  </span></span> 
                               </li>
 
@@ -3720,7 +3720,7 @@
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span><span class="mrgn-tp-0 text-muted h5"> $1,911.97 is Joseph's total federal income tax you have to withhold (step 2)</span> 
+                                 </span><span class="mrgn-tp-0 text-muted h5"> $1,910.59 is Joseph's total federal income tax you have to withhold (step 2)</span> 
                               </li>
                               			
    			   <li class="brdr-bttm">
@@ -3734,7 +3734,7 @@
                               <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $3,709.87 is Joseph's total annual amount you have to withhold and remit (federal and provincial income tax)
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $3,708.49 is Joseph's total annual amount you have to withhold and remit (federal and provincial income tax)
                                  </span></span> 
                               </li>
 
@@ -3745,12 +3745,12 @@
 </li>
 <li><h4>Determine the annual tax to be deducted from the recipient’s yearly remuneration not including the lump-sum payment</h4>
 <p>You need to calculate the recipient’s annual tax on their annual remuneration <strong>not including the lump-sum payment</strong>.</p>
-<p>Continue to <a href="#tab-mnl">Any payments (manual calculation)</a> using steps 1, 2, 3 and 4. 
+<p>Continue to <a href="#tab-mnl">Regular payments (manual calculation)</a> using steps 1, 2, 3 and 4. 
 <p>From step 4, you only need to get the result: This is the total amount you have to withhold and remit: federal, provincial and territorial income tax.</p>
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
 
-<p>Following the instructions in the example under "Any payments (manual calculation)", Joseph determined that his total federal income tax is $1,536.94 and his total provincial income tax is $1,701.03. This is the total amount you have to withhold and remit from Joseph’s yearly remuneration not including the lump sum payment.</p>
+<p>Following the instructions in the example under "Regular payments (manual calculation)", Joseph determined that his total federal income tax is $1,536.94 and his total provincial income tax is $1,527.90. This is the total amount you have to withhold and remit from Joseph’s yearly remuneration not including the lump sum payment.</p>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -3808,7 +3808,7 @@
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span><span class="mrgn-tp-0 text-muted h5"> $3,709.87 is Joseph's annual income tax to be deducted, including the lump-sum payment (step 5a)</span> 
+                                 </span><span class="mrgn-tp-0 text-muted h5"> $3,708.49 is Joseph's annual income tax to be deducted, including the lump-sum payment (step 5a)</span> 
                               </li>
 	
 	<li class="brdr-bttm">
@@ -3821,7 +3821,7 @@
 		<li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $645.03 is Joseph's total income tax to be deducted from the lump-sum payment if he requests it
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $643.65 is Joseph's total income tax to be deducted from the lump-sum payment if he requests it
                                  </span></span> 
                               </li>
 
@@ -3944,7 +3944,7 @@
                               <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $554.50 is Joseph's net remuneration for the pay period
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $544.50 is Joseph's net remuneration for the pay period
                                  </span></span> 
                               </li>
                    <li class="brdr-bttm">
@@ -4083,7 +4083,7 @@
                                  <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x"></i>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5">$2,710.16 ($18,076.72 X 15%) is Joseph's total federal tax credits multiplied by the lowest federal tax rate for the year. $18,076.72 is the sum of:
+                                 </span>  <span class="mrgn-tp-0 text-muted h5">$2,711.51 ($18,076.72 X 15%) is Joseph's total federal tax credits multiplied by the lowest federal tax rate for the year. $18,076.72 is the sum of:
 
 				 <ul class="mrgn-lft-lg lst-spcd mrgn-bttm-md">
 
@@ -4222,12 +4222,12 @@
                                  <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x"></i>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5">$2,762.56 ($18,417.06 X 15%) is Steve's total federal tax credits multiplied by the lowest federal tax rate for the year. $18,417.06 is the sum of:
+                                 </span>  <span class="mrgn-tp-0 text-muted h5">$2,762.60 ($18,417.32 X 15%) is Steve's total federal tax credits multiplied by the lowest federal tax rate for the year. $18,417.32 is the sum of:
 				 <ul class="mrgn-lft-lg lst-spcd mrgn-bttm-md">
 
 				<li>$15,000 (only basic personal amount) is Steve's personal tax credit amounts reported on the federal Form TD1</li>
 				<li>$1,544.40 ($29.70 X 52 pay periods) is Steve's base QPP contributions for the pay period multiplied by the number of pay periods in the year, up to the year’s maximum annual Steve's contribution </li>
-				<li>$363.22 ($6.99 X 52 pay periods) is Steve's Quebec EI premiums for the pay period multiplied by the number of pay periods in the year, up to the year’s maximum annual Steve's premiums  </li>
+				<li>$363.48 ($6.99 X 52 pay periods) is Steve's Quebec EI premiums for the pay period multiplied by the number of pay periods in the year, up to the year’s maximum annual Steve's premiums  </li>
 				<li>$141.44 ($2.72 X 52 pay periods) is Steve's QPIP premiums for the pay period multiplied by the number of pay periods in the year, up to the year’s maximum annual Steve's premiums</li>
 				<li>$1,368 is Steve's Canada employment amount</li>
 				</ul></span>
@@ -4236,7 +4236,7 @@
  			<li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $1,484.54 is Steve's federal basic income tax
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $1,484.50 is Steve's federal basic income tax
                                  </span></span> 
                               </li>
 
@@ -4244,14 +4244,14 @@
                                  <span class="fas fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x"></i>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $244.95 ($1,484.54 X 16.5% of Steve's total basic federal tax) is Steve's federal abatement</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $244.94 ($1,484.50 X 16.5% of Steve's total basic federal tax) is Steve's federal abatement</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
 
                               <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $1,239.59 is Steve's total federal tax payable for the year 
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $1,239.56 is Steve's total federal tax payable for the year 
                                  </span></span> 
                               </li>
 
@@ -4370,7 +4370,7 @@
                                  </span>  <span class="mrgn-tp-0 text-muted h5">$1,530.01 ($14,166.72 X 10.80%) is Joseph's total provincial tax credits multiplied by the lowest New Brunswick tax rate for the year:
 				 <ul class="mrgn-lft-lg lst-spcd mrgn-bttm-md">
 
-				<li>$12,458 is Joseph's total of provincial tax credit amounts reported on his provincial or territorial Form TD1</li>
+				<li>$12,458 is Joseph's total of provincial tax credit amounts reported on his provincial or territorial Form TD1NB</li>
 				<li>$1,242.28 ($23.89 X 52 pay periods) is Joseph's base CPP contributions for the pay period multiplied by the number of pay periods in the year, up to the year’s maximum annual Joseph's contribution</li>
 				<li>$466.44 ($8.97 X 52 pay periods) is Joseph's EI premiums for the pay period multiplied by the number of pay periods in the year, up to the year’s maximum annual Joseph's premiums </li>
 				
