--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -183,8 +183,8 @@
                                           <li><span class="fas fa-times text-danger fa-li fa-lg"></span>The payment is for a bonus, use: <a href="#tab-bonus">Bonus or irregular payments</a></li>
                     			<li><span class="fas fa-times text-danger fa-li fa-lg"></span>The payment is for a lump-sum payment, use: <a href="#tab-lump">Lump-sum payments</a></li>
 					<li><span class="fas fa-times text-danger fa-li fa-lg"></span>The payment is for a patronage payment, use: <a href="#tab-bonus">Bonus or irregular payments</a></li>
-					       <li><span class="fas fa-times text-danger fa-li fa-lg"></span>Your pay period does not have a table provided in the common or uncommon pay periods per year, use: <a href="#tab-mnl">Any payments (manual calculation)</a> </li>
-  				          <li><span class="fas fa-times text-danger fa-li fa-lg"></span>You received Form TD1X from your employee, use: <a href="#tab-mnl">Any payments (manual calculation)</a> </li>
+					       <li><span class="fas fa-times text-danger fa-li fa-lg"></span>Your pay period does not have a table provided in the common or uncommon pay periods per year, use: <a href="#tab-mnl">Regular payments (manual calculation)</a> </li>
+  				          <li><span class="fas fa-times text-danger fa-li fa-lg"></span>You received Form TD1X from your employee, use: <a href="#tab-mnl">Regular payments (manual calculation)</a> </li>
 					   <li><span class="fas fa-times text-danger fa-li fa-lg"></span>You received Form TD3F from the individual, use: <a href="#tab-bonus">Bonus or irregular payments</a></a>  </li>
 
                                           
@@ -2317,7 +2317,7 @@
 <details><summary>Types of irregular payments</summary>
 <p>Irregular payments includes:</p>
  <ul> 
-<li><a href="/cra-arc/payroll/calculate/payment/commission.html">Commissions paid without expenses where they are paid periodically or the amounts fluctuate</a> (for any other commissions payments, use: <a href="#tab-mnl">Any payments (manual calculation)</a>)</li>
+<li><a href="/cra-arc/payroll/calculate/payment/commission.html">Commissions paid without expenses where they are paid periodically or the amounts fluctuate</a> (for any other commissions payments, use: <a href="#tab-mnl">Regular payments (manual calculation)</a>)</li>
 <li><a href="/cra-arc/payroll/calculate/payment/director-fees.html">Director’s fees</a> </li>
 <li>Overtime earned in another pay period</li>
 <li><a href="/cra-arc/payroll/calculate/payment/patronage.html">Patronage payments</a></li>
