--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -4873,6 +4873,9 @@
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-84.html#h-297759">ITA: 118(1)</a></dt><dd> Personal credits</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-84.html#h-297759">ITA: 118(10)</a></dt><dd> Canada Employment Credit</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-90.html#docCont">ITA: 118.7 </a></dt><dd> Credit for EI and QPIP premiums and CPP contributions</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-117.html#h-303233:~:text=Amount%20to%20be%20deducted%20or%20withheld%20from%20payment%20to%20customer">ITA: 135(3) </a></dt><dd> Amount to be deducted from patronage payments</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-148.html#docCont:~:text=Marginal%20note%3A-,Withholding,-153%C2%A0(1">ITA: 153(1) </a></dt><dd> Withholding</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-184.html#h-314143:~:text=Tax-,212%C2%A0(1),-Every%20non%2Dresident">ITA: 212(1) </a></dt><dd> Tax on amount paid to non-resident</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/index.html">ITR: 100(1)</a></dt><dd> Definition of pay period, personal credits,  remuneration</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/index.html">ITR: 100(3)</a></dt><dd> Deductions from the payment of remuneration</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/index.html">ITR: 100(4)</a></dt><dd> Province of employment</dd>
@@ -4880,6 +4883,8 @@
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/index.html">ITR: 102(1)</a></dt><dd> Periodic payments</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/index.html">ITR: 102(2)</a></dt><dd> Payment in respect of commissions</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-2.html#docCont">ITR: 103</a></dt><dd> Non-periodic payments</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-3.html#docCont:~:text=Non%2DResidents-,105%C2%A0(1),-Every%20person%20paying">ITR: 105(1)</a></dt><dd> Withholding on payment of fees for services to non-resident</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-3.html#docCont:~:text=Fishermen%E2%80%99s%20Election-,105.1%C2%A0(1)%C2%A0,-Notwithstanding%20section%20100">ITR: 105.1(2)</a></dt><dd> Fishermen’s election</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/C.R.C.%2C_c._945/page-3.html#docCont">ITR: 107(1)</a></dt><dd> Employee's returns</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/C.R.C.%2C_c._945/page-4.html#docCont">ITR: 109</a></dt><dd> Elections to increase deductions</dd>
 <dt><a href="https://www.canlii.org/en/ab/laws/stat/rsa-2000-c-a-30/latest/rsa-2000-c-a-30.html">ITA AB: 5(1)</a></dt><dd> Taxable income</dd>
