--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -2333,17 +2333,11 @@
 <li><h4> Determine if you need to calculate using a special income tax rate </h4>
 <p>You need to determine the type of payment to calculate using a special income tax rate.</p>
 	
- <p>If the payment is a: </p>  
-  <ul>
-        <li><strong>Patronage payment</strong>, continue to <a href="#patron">step 1a</a>.</li>
-	<li><strong>Payment made to a fisher (completed form TD3F)</strong>, continue to <a href="#fishers">step 1b</a>.</li>
-	<li><strong>Payments of fees for services to a non-resident</strong>, continue to <a href="#fees-non">step 1c</a>.</li>
-        <li><strong>Any other payments</strong>, continue to <a href="#otherpay">step 2</a>.</li>
-            </ul>
-
+ <p>Continue to the following step if the payment is a: </p>  
+  
 <ol class="lst-stps-sub">
-<li>
- <h4 id="patron">Calculate the income tax to be withheld and remitted for a patronage payment</h4>
+<li><details><summary>Patronage payment</summary>
+ <p id="patron">Use the following to calculate the income tax to be withheld and remitted for a patronage payment</p>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -2421,10 +2415,11 @@
                   </ul>
 
 </details>
-
+</details>
 </li>
 
-<li><h4 id="fishers">Calculate the total remuneration for a payment made to a fisher when they gave you a completed form TD3F</h4>
+<li><details><summary>Payment made to a fisher (completed form TD3F)</summary>
+<p id="fishers">Use the following to calculate the total remuneration for a payment made to a fisher when they gave you a completed form TD3F</p>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -2473,8 +2468,11 @@
                   </ul>
 
 </details>
+</details>
 </li>
-<li><h4 id="fees-non">Calculate the total amount of payment of fees for services rendered in Canada made to a non-resident</h4>
+
+<li><details><summary>Payments of fees for services to a non-resident</summary>
+<h4 id="fees-non">Use the following to calculate the total amount of payment of fees for services rendered in Canada made to a non-resident</h4>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -2523,8 +2521,12 @@
                   </ul>
 
 </details>
+</details>
 </li>
-</ol>	
+</ol>
+<p> <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to next step for any other payments.</p>
+
+	
 </li>     
 
 <li> <h4 id="otherpay"> Calculate the total remuneration </h4>
