--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -2318,14 +2318,14 @@
 <p>Irregular payments includes:</p>
  <ul> 
 <li><a href="/cra-arc/payroll/calculate/payment/commission.html">Commissions paid without expenses where they are paid periodically or the amounts fluctuate</a> (for any other commissions payments, use: <a href="#tab-mnl">Regular payments (manual calculation)</a>)</li>
-<li><a href="/cra-arc/payroll/calculate/payment/director-fees.html">Director’s fees</a> </li>
+<li><a href="/cra-arc/payroll/calculate/payment/elected-officials.html">Director’s fees</a> </li>
 <li>Overtime earned in another pay period</li>
 <li><a href="/cra-arc/payroll/calculate/payment/patronage.html">Patronage payments</a></li>
 <li><a href="/cra-arc/payroll/calculate/payment/fees-other.html">Payments of fees or other amounts for services</a></li>
 <li><a href="/cra-arc/payroll/calculate/payment/fishers.html">Payments made to fishers and you received Form TD3F from the individual</a> </li>
-<li><a href="/cra-arc/payroll/calculate/payment/police.html">Special or extra duty pay for police officers</a></li>
+<li><a href="/cra-arc/payroll/calculate/payment/police.html">Payments to police officers for special or extra duty from third parties</a></li>
 <li><a href="/cra-arc/payroll/calculate/payment/vacation.html">Vacation pay paid when the employee does not take holidays</a></li>
-<li><a href="/cra-arc/payroll/calculate/payment/terminate-notice.html">Wages in lieu of termination notice</a></li>
+<li><a href="/cra-arc/payroll/calculate/payment/terminate-notice.html">Payments of wages in lieu of termination notice</a></li>
 </ul>
 </details>
             <h3>Steps</h3>
@@ -2337,7 +2337,7 @@
   
 <ol class="lst-stps-sub">
 <li><details><summary>Patronage payment</summary>
- <p id="patron">Use the following to calculate the income tax to be withheld and remitted for a patronage payment</p>
+ <p id="patron">Use the following to calculate the income tax to be withheld and remitted for a <a href="/cra-arc/payroll/calculate/payment/patronage.html">patronage payment</a></p>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -2419,7 +2419,7 @@
 </li>
 
 <li><details><summary>Payment made to a fisher (completed form TD3F)</summary>
-<p id="fishers">Use the following to calculate the total remuneration for a payment made to a fisher when they gave you a completed form TD3F</p>
+<p id="fishers">Use the following to calculate the total remuneration for a <a href="/cra-arc/payroll/calculate/payment/fishers.html">payments made to a fisher</a> when they gave you a completed form TD3F</p>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -2472,7 +2472,7 @@
 </li>
 
 <li><details><summary>Payments of fees for services to a non-resident</summary>
-<h4 id="fees-non">Use the following to calculate the total amount of payment of fees for services rendered in Canada made to a non-resident</h4>
+<p id="fees-non">Use the following to calculate the total amount of <a href="/cra-arc/payroll/calculate/payment/fees-other.html">payment of fees for services</a> rendered in Canada made to a non-resident</p>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -2524,7 +2524,7 @@
 </details>
 </li>
 </ol>
-<p> <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to next step for any other payments.</p>
+<p class="mrgn-tp-md"> <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to next step for <strong>any other payments</strong>.</p>
 
 	
 </li>     
