--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -2333,7 +2333,7 @@
 <li><h4> Determine if you need to calculate using a special income tax rate </h4>
 <p>You need to determine the type of payment to calculate using a special income tax rate.</p>
 	
- <p>Continue to the following step if the payment is a: </p>  
+ <p>Calculate using a special income tax rate if the payment is a: </p>  
   
 <ol class="lst-stps-sub">
 <li><details><summary>Patronage payment</summary>
