--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -2332,9 +2332,8 @@
                      <ol class="lst-stps stps-strpd">
 <li><h4> Determine if you need to calculate using a special income tax rate </h4>
  <p>Calculate using a special income tax rate if the payment is a: </p>  
-  
-<ol class="lst-stps-sub">
-<li><details><summary>Patronage payment</summary>
+
+<details><summary><strong>Patronage</strong> payment</summary>
  <p id="patron">Use the following to calculate the income tax to be withheld and remitted for a <a href="/cra-arc/payroll/calculate/payment/patronage.html">patronage payment</a></p>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
@@ -2414,9 +2413,8 @@
 
 </details>
 </details>
-</li>
 
-<li><details><summary>Payment made to a fisher (completed form TD3F)</summary>
+<details><summary>Payment made to a <strong>fisher</strong> (completed form TD3F)</summary>
 <p id="fishers">Use the following to calculate the total remuneration for a <a href="/cra-arc/payroll/calculate/payment/fishers.html">payments made to a fisher</a> when they gave you a completed form TD3F</p>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
@@ -2467,9 +2465,8 @@
 
 </details>
 </details>
-</li>
 
-<li><details><summary>Payments of fees for services to a non-resident</summary>
+<details><summary>Payments of fees for services to a <strong>non-resident</strong></summary>
 <p id="fees-non">Use the following to calculate the total amount of <a href="/cra-arc/payroll/calculate/payment/fees-other.html">payment of fees for services</a> rendered in Canada made to a non-resident</p>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
@@ -2520,8 +2517,7 @@
 
 </details>
 </details>
-</li>
-</ol>
+
 <p class="mrgn-tp-md"> <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to next step for <strong>any other payments</strong>.</p>
 
 	
