--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -2466,7 +2466,7 @@
 </details>
 </details>
 
-<details><summary>Payments of fees for services to a <strong>non-resident</strong></summary>
+<details><summary>Payment of fees for services to a <strong>non-resident</strong></summary>
 <p id="fees-non">Use the following to calculate the total amount of <a href="/cra-arc/payroll/calculate/payment/fees-other.html">payment of fees for services</a> rendered in Canada made to a non-resident</p>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
